--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,15 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/sustainability.jar
+dist.jar=${dist.dir}/MarineChallengesApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/sustainability
+dist.jlink.output=${dist.jlink.dir}/MarineChallengesApp
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,8 +71,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=sustainability
-main.class=sustainability.SustainabilityApp
+jlink.launcher.name=MarineChallengesApp
+main.class=marinechallengesapp.MarineChallengesApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
