git commit -m PollutionActivities

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/MarineChallengesApp.jar
+dist.jar=${dist.dir}/SDG_CA2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/MarineChallengesApp
+dist.jlink.output=${dist.jlink.dir}/SDG_CA2
 excludes=
 includes=**
 jar.compress=false
@@ -71,8 +71,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=MarineChallengesApp
-main.class=marinechallengesapp.MarineChallengesApp
+jlink.launcher.name=SDG_CA2
+main.class=sustainability.LandingPageGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
